--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 	<body>
 		<h1> Git</h1>
 		<h2>Wednesday - 15 Nov 2023</h2>
+		<h4>git status</h4>
+		<h4>git add index.html</h4>
+		<h4>git commit -m "message"</h4>
+		<h4>git push</h4>
 	</body>
 </html>
