--- a/jsr.html
+++ b/jsr.html
@@ -13,6 +13,71 @@
 				background-size:100% 450px ;
 				border:dotted 7px green;
 			}
+			.j{
+				width:100px;
+				height:100px;
+				margin: -50px 0 0 0;
+				border-radius:10%;
+				box-shadow:5px 5px 5px yellow;
+				float:left;
+					
+					background:linear-gradient(to top,black,#0bc47f);
+			}
+			.j:hover{
+					transform:scale(1.1,1.1);
+					box-shadow:5px 5px 5px white;
+			}
+				.j1{
+					margin-left:135px;
+
+				}
+				.j2{
+					margin-left:20px;
+
+				}
+				.j3{
+					margin-left:20px;
+
+				}
+				.j4{
+					margin-left:20px;
+
+				}
+				.j5{
+					margin-left:20px;
+
+				}
+				.j6{
+					margin-left:20px;
+
+				}
+				.j7{
+					margin-left:20px;
+
+				}
+				.j8{
+					margin-left:20px;
+
+				}
+				.j9{
+					margin-left:20px;
+
+				}
+				.j10{
+					margin-left:20px;
+
+				}
+				.t{
+					color:#cd02f2;
+					font-weight:900;
+					font-size:90px;
+					text-align:center;
+					text-shadow:5px 4px 6px #affcef;
+				}
+				.t:hover{
+					color:white;
+					text-shadow:5px 4px 6px #cd02f2;
+				}
 			#r1area{
 				width:100%;
 				height:220px;	
@@ -128,6 +193,37 @@
 		<div id="mainarea">
 			<div id="aboutarea">
 			</div>
+				<div class="j j1 t">
+					J
+				</div>
+				<div class="j j2 t">
+					A
+				</div>
+				<div class="j j3 t">
+					M
+				</div>
+				<div class="j j4 t">
+					S
+				</div>
+				<div class="j j5 t">
+					H
+				</div>
+				<div class="j j6 t">
+					E
+				</div>
+				<div class="j j7 t">
+					D
+				</div>
+				<div class="j j8 t">
+					P
+				</div>
+				<div class="j j9 t">
+					U
+				</div>
+				<div class="j j10 t">
+					R
+				</div>
+			
 			<hr width="1px">
 			<div id="r1area">
 				<div id="r11">
